apply plugin: 'java-library'

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

repositories {
	jcenter()
	mavenCentral()
	maven {
		url "https://jitpack.io"
	}
}

dependencies {
	testImplementation 'junit:junit:4.13'
}
